# system-tables-audit-logs

./: .gitignore  README.md  pyproject.toml  requirements.txt
.planning/: PROJECT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
bundle/: databricks.yml  requirements.txt
bundle/src/: __init__.py  generate_alerts.py
bundle/tests/: test_generate_alerts.py
bundle/tests/fixtures/: duplicate_names.json  empty_alert.json  item_not_dict.json  json_infinity_token.json  malformed_top_level.json  missing_required_field.json  non_finite_threshold.json  null_alert.json  queries_and_alerts_not_list.json  query_only_entry.json  string_alert.json  unknown_operator.json  valid_entry.json
notebooks/: create_queries_and_alerts.py  functions.py  geoip_function_and_queries.sql  geolocation_function_and_queries.sql
resources/: queries_and_alerts.json
terraform/: README.md  job.tf  main.tf  sql.tf  variables.tf
